# 42

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  a  author  main.c
src/: CMakeLists.txt
src/lib/builtins/: CMakeLists.txt  builtins.c  builtins.h  cd.c  run_builtin.c
src/lib/ft_select/: CMakeLists.txt  cursor.c  cursor_more.c  draw.c  ft_select.c  ft_select.h  get_winsize.c  init_and_signals.c  select_args.c  support_1.c  support_2.c  support_3.c  termcap_extra.c  two_side_list.c
src/lib/libalias/: CMakeLists.txt  alias.h  alias_add.c  alias_cmp_pair.c  alias_del.c  alias_del_pair.c  alias_get_value.c  alias_init.c  alias_print.c  alias_remove.c
src/lib/libcalc/: CMakeLists.txt  calc.c  calc.h  calc_convert_to_postfix.c  calc_evaluate.c  calc_get_number.c  calc_get_operator.c  calc_get_priority.c  calc_get_token.c  calc_is_binary.c  calc_is_forbidden.c  calc_is_operator.c  calc_is_unary.c  calc_operate.c  calc_operate_add.c  calc_operate_and.c  calc_operate_div.c  calc_operate_eql.c  calc_operate_goe.c  calc_operate_grt.c  calc_operate_les.c  calc_operate_loe.c  calc_operate_mlt.c  calc_operate_mod.c  calc_operate_neq.c  calc_operate_or.c  calc_operate_sub.c  calc_state_number.c  calc_state_operator.c  calc_str.c  calc_tokenize.c
src/lib/libcc/: .gitignore  CMakeLists.txt  Makefile  README.md  atoll.c  author  bzero.c  cc.h  fdputs.c  file_exists.c  isdigit.c  isnumber.c  isspace.c  memalloc.c  memcpy.c  memmove.c  memset.c  nstrjoin.c  str_append.c  str_append_char.c  str_contains.c  str_contains_char.c  str_equals.c  str_starts_with.c  strcat.c  strchr.c  strcmp.c  strcpy.c  strdup.c  strlen.c  strncmp.c  strncpy.c  strnew.c  strsplitcharset.c  strstr.c  strsub.c  strtrim.c  vec_init.c  vec_push.c  xmalloc.c
src/lib/libenv/: CMakeLists.txt  arr2.c  arr2_quick_sort.c  av_del.c  av_get.c  av_init.c  av_set.c  env.h  env_add_field.c  env_cmp.c  env_cmp_pair.c  env_del.c  env_del_field.c  env_del_pair.c  env_export.c  env_get_field.c  env_get_field_val.c  env_get_value.c  env_init.c  env_insert_to.c  env_print_full.c  env_print_global.c  env_print_pair.c  env_remove_from.c  env_update.c  exec_env_2array.c  exec_env_add.c  exec_env_del.c  exec_env_get_value.c  exec_env_init.c  exec_env_insert.c  fill_graph_by_env_names.c  get_env_names_sorted.c  get_name_length.c  get_valid_name_length.c  get_valid_name_length_no_check.c  is_char_valid.c  is_name_valid.c  print_all.c  print_env.c
src/lib/liberror/: CMakeLists.txt  error.h  error_print.c  error_print_formatted.c  print_invalid_option.c
src/lib/libexec/: CMakeLists.txt  close_fds.c  exec.c  exec.h  exec_and_or.c  exec_command.c  exec_complete_cmd.c  exec_list.c  exec_pipe_seq.c  exec_pipeline.c  exec_simple_cmd.c  expand_ast.c  get_args.c  get_command.c  get_redirect_nodes.c  is_path.c  l_great_and_redirect.c  l_great_redirect.c  l_heredoc_redirect.c  l_less_and_redirect.c  l_less_redirect.c  prepare_exec_env.c  prepare_redirect.c  redirect_close_stdio.c  redirect_great.c  redirect_great_and.c  redirect_heredoc.c  redirect_init_process_file.c  redirect_init_process_ioerr.c  redirect_less.c  redirect_less_and.c  redirect_minus_arg.c  redirect_parse_left_side.c  redirect_parse_right_side.c  redirect_print_error.c  redirect_utils.c  stdio_backup.c  stdio_reset.c
src/lib/libexpand/: CMakeLists.txt  exec_handle_back_slash.c  exec_handle_dollar.c  exec_handle_tilda.c  expand.h  expand_back_slash.c  expand_bang.c  expand_by_type.c  expand_calc.c  expand_dollar.c  expand_exit_code.c  expand_input.c  expand_input_handler.c  expand_parameter.c  expand_prefix.c  expand_raw.c  expand_suffix.c  expand_tilda.c  get_brace.c  get_current_state.c  get_env_or_av_value.c  get_operator_type.c  handle_all.c  handle_back_slash.c  handle_bang.c  handle_dollar.c  handle_double_quote.c  handle_raw.c  handle_single_quote.c  handle_tilda.c  handle_unset.c  input_handle_back_slash.c  input_handle_bang.c  input_handle_dollar.c  is_expand_err_code.c  validate_back_slash.c  validate_bang.c  validate_dollar.c  validate_double_quote.c  validate_input.c  (+2 more)
src/lib/libhash/: CMakeLists.txt  hash.h  hash_del.c  hash_get_bin_path.c  hash_get_path.c  hash_init.c  hash_insert.c  hash_print.c
src/lib/libhistory/: CMakeLists.txt  h_dlist.c  h_dlist.h  h_dlist2.c  h_file.c  hist_get_by_index.c  hist_get_by_prefix.c  hist_get_last.c  hist_get_next.c  hist_get_prev.c  hist_init.c  hist_print.c  hist_push.c  hist_reset_cur_ind.c  hist_save.c  history.h
src/lib/libhistory_tests/: CMakeLists.txt  tests.c  utils.c  utils.h
src/lib/libjob/: .gitignore  CMakeLists.txt  add_job_to_list.c  all_funcs.c  check_jobs.c  continue_job.c  control.c  del_process.c  do_job_notification.c  exec_builtin_by_index.c  feee_job.c  find_job.c  find_job_by_index.c  fork_and_launch_processes.c  format_job_info.c  free_all_jobs.c  free_job.c  free_processes.c  get_args.c  get_builtin_index.c  get_job_status.c  get_last_process_status.c  get_new_job_index.c  get_redirect_nodes.c  get_status_message.c  get_status_sign_for_job.c  handle_assignments.c  init_shell.c  is_minus.c  is_standard_io.c  job_builtins.c  job_is_completed.c  job_is_stopped.c  job_new.c  jobs.h  jobs_add.c  jobs_init.c  launch_job.c  launch_job_utils.c  launch_process.c  (+37 more)
src/lib/liblex/: CMakeLists.txt  destruct_token.c  destruct_tokens.c  exp_back_slash.c  exp_dollar.c  exp_double_quote.c  exp_single_quote.c  exp_unset.c  expand_token.c  get_brace.c  get_current_state.c  get_last_token.c  get_operator.c  get_tokens.c  is_delimiter.c  is_doublequote_esc.c  is_number.c  is_operator.c  is_redirection.c  lex_del.c  lex_err.c  lex_map.c  lex_raw.c  lex_str.c  lex_str_len.c  lex_str_sub.c  lexer.h  lexer_internal.h  match_bang.c  match_brace.c  match_heredoc.c  match_parameter.c  match_tilda.c  print_tokens.c  recognize_operator.c  stream.c  (+24 more)
tests/: CMakeLists.txt  basic_tests.tst  tests.c
tests/libhistory_tests/: CMakeLists.txt  history_tests.h  tests.c  utils.c  utils.h
tests/liblex_tests/: CMakeLists.txt  lex_tests.h  tests.c
tests/libtestutils/: CMakeLists.txt  asserts.c  asserts.h
(+338 files in other folders)
